# allProgramsFromCLion

./: CMakeLists.txt  TEST.cpp  a.out  a.out.ld_7Ix7ci  a.out.ld_boBjUm  a.out.ld_d7SmrT  a.out.ld_q7i4MX  a.out.ld_x3zD96  analysisOfPathsInAFunctionalGraph.cpp  animalGame.cpp  apartments.cpp  apartments2.cpp  arrayIntIndex.cpp  avoidTrygrub.cpp  avoidTrygubTest2.cpp  ballsOfSteel.cpp  basicSet.cpp  bitOperations.cpp  boardMoves.cpp  buildingTeams.cpp  buildingTeamsBFS.cpp  buildingTeamsDFS.cpp  challengesInASchoolNo41.cpp  chessboardAndQueens.cpp  closingTheFarn.cpp  companyQueries1.cpp  constructingTheArray.cpp  cycleFinding.cpp  diamondCollector.cpp  distanceQueries.cpp  domino.cpp  dontBeLast.cpp  dyanamicDiameter.cpp  dynamicDiameter.cpp  errichTacToe.cpp  fencedIn.cpp  gameRoutes.cpp  gridPaths2.cpp  iceSkating.cpp  in.txt  (+33 more)
maths/: graphMelMaths.txt
template for each algorithm/: BFStemplateForGraph.cpp  DFStemplateForGraph.cpp  DFStemplateForMatrix.cpp  DPtemplateForGraphIterative.cpp  DPtemplateForUnits.cpp  FloydWarshallTemplate.cpp  a.out  a.out.ld_hD1Am8  a.out.ld_jIjZz6  a.out.ld_rTNfjV  allLongestPathsTemplate.cpp  bellmanFordTemplate.cpp  bipartiteTemplate.cpp  connectedComponentsMergedTemplate.cpp  connectedComponentsTemplateForGraph.cpp  dijkstraTemplate.cpp  greedyAlgorithmMinimizingSums.cpp  greedyAlgorithmScheduling.cpp  greedyAlgorithmTemplateRecursion.cpp  greedyAlgorithmTemplateUpperOrLowerbound.cpp  mapOrSetStructures.cpp  nearestSmallerElement.cpp  scanlineTemplate.cpp  templateForDequeue.cpp
templateForEachAlgorithm/: BFStemplateForGraph.cpp  (+31 more)
(+245 files in other folders)
