cmake_minimum_required(VERSION 3.15)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled "unsorted folders/main.cpp" "tests for each data type from The Holy Table/stack.cpp" leetCode/binarySearch/sqrtOfX.cpp leetCode/binarySearch/twoSumII-inputArrayIsSorted.cpp leetCode/binarySearch/kokoEatingBananas.cpp "template for each algorithm/generatingSubsets.cpp" "template for each algorithm/generatingPermutations.cpp" CSES/completeSearch/creatingStrings.cpp "template for each algorithm/greedyAlgorithmMinimizingSums.cpp" CSES/greedyAlgorithms/stickLengths.cpp CSES/greedyAlgorithms/movieFestival.cpp CSES/greedyAlgorithms/missingCoinSum.cpp CSES/greedyAlgorithms/towers.cpp)